added in index.html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Hello from Deploy Pipeline!</h1><p>Environment: UAT</p><p>Version: REPLACE_TAG</p>
+<h1>Hello from Deploy Pipeline!</h1><p>Environment: REPLACE_ENV</p><p>Version: REPLACE_TAG</p>
